--- a/PhotoBook/Views/Photo/Edit.cshtml
+++ b/PhotoBook/Views/Photo/Edit.cshtml
@@ -9,10 +9,8 @@
 <script src="@Url.Content("~/Scripts/jquery-ui-1.10.3.min.js")"></script>
 
 <div class="col-md-6">
-    <div class="image-detail">
-        <div class="image-single">
-            <img src="@Url.Content(String.Concat("~/_uploads/", Model.Photo))" alt="photo" class="centered" />
-        </div>
+    <div class="thumbnail">
+        <img src="@Url.Content(String.Concat("~/_uploads/", Model.Photo))" alt="@Model.Description" />
     </div>
 </div>
 <div class="col-md-6" style="margin-top: 15px;">
@@ -33,6 +31,7 @@
         @Html.LabelFor(model => model.Tags)
         @Html.TextBoxFor(model => model.Tags, new { @class = "form-control"})
         @Html.ValidationMessageFor(model => model.Tags)
+        <small class="text-muted">Ex.: city, night, bridge</small>
     </div>
     
     <div class="form-group">
