--- a/PhotoBook/Views/Photo/Upload.cshtml
+++ b/PhotoBook/Views/Photo/Upload.cshtml
@@ -30,6 +30,7 @@
     <div class="form-group">
         @Html.LabelFor(m => m.Tags)
         @Html.TextBoxFor(m => m.Tags, new { @class = "form-control"})
+        <small class="text-muted">Ex.: city, night, bridge</small>
     </div>
 
     <input type="submit" value="Upload" class="btn btn-primary" /> 
