--- a/PhotoBook/Views/Account/ConfirmationSuccess.cshtml
+++ b/PhotoBook/Views/Account/ConfirmationSuccess.cshtml
@@ -3,4 +3,5 @@
 }
 
 <h1>Registration Completed</h1>
-<h2>You have completed the registration process. You can now logon to the system by clicking on the logon link.</h2>
+<h2>You have completed the registration process. 
+    You can now log in to the system by clicking on the @Html.ActionLink("log in link", "Login", "Account").</h2>
