web api support

--- a/PhotoBook/Views/Emails/RegEmail.cshtml
+++ b/PhotoBook/Views/Emails/RegEmail.cshtml
@@ -6,6 +6,6 @@ To: @ViewBag.To
 From: admin@photobook.pb
 Subject: Complete Registration Process
 
-Hello @ViewBag.UserName,
+Hello, @ViewBag.UserName,
 
 To complete the registration process click on this link http://localhost:1037/Account/RegisterConfirmation/@ViewBag.ConfirmationToken
